lab1/Test/L1-A-11-63.cmm
int zbnsStHgV6l8 ( ) {
  int _sACksBZygyr ;
  struct {
    struct GaH7EYvTw37 {
    }wK4FQ ;
  }QYHjvRqKB93Ph9mLc ;
  float TzfXucq , dZsHinnCd = FdFmH ;
  if ( poY9 )   while ( W8Q )   SJjg1 

else {
    int vrbY ;
    return keZgc_TyGoFPS8fRTWG ;
    if ( B8HOB2wlP4p1J )     g >= UJxhT6o9 + - ! mtv6usSXw_BBXmCnzN 
      ( L = FzarPyT_OGiCO_KU || WEIXYijOF && pClh0oLGjXCPbk 
      / - ! ! j4 [ pD8VYSx2bo <= bKt1u7X + jJXC4XU * ( UQ9SzJqPgbrgKILrjlD 
      > ! _3J ( P3rcOiiylzLZA , iAevKsxGC , l6WJsx = VqoN 
      = H_yJ75xks < NfCK == znZhfV8w1f1 ) != 2110741330.112913668 
      ) - - 569790691 ] * eQPhY8h ( ) ) . vVfVPJt ;

  }
}
struct yGIhXasu IPrmuCDUXQuw [ 842861181 ] , y2_GuhKre_i4ltFIzi 

;
int ;
int RnbtXj1AE1 ( int WgYafvfaHeE551 ) {
  while ( R1PrlSaXdcKZ1wY )   j ;

}float 
int ;
int F5nI ( ) {
  ;
}
int P9mZPu ( ) {
}
int li1pBl4QW2Kpf1e4_Wx ( int hREF6BfE3fu , int M3M6J 
  ) {
  while ( DFawP1mnM )   dFO6QUlhATW1 ;

  while ( B4Z6M0cNJ9ZgueMRIJUS )   SHcjkk1BzNhUB56hzQ4U 
    ;

  while ( JWui )   Z9i6uazSaXQjTRAP4 ;

  keJxOBG ;
> }
int DPurIS8rcLY ( ) {
  if ( _ )   cI ;
else   if ( XRp25ddxKP )   U8OaLk1EgbjXO1 ;


}
int K3fc7Lq0pUWRp0hgs ( ) {
{
  }}
int BlpS9zVpcyT ( ) {
  if ( OG250Ooe0dAr6e9wX ) {
    kaPVfZgYr5aY ;
  }else   oaIQOL74lgDo9Dz6cF ;

  if ( zhPfyBRPg72ITscoiAP )   vUcP6NyfDD ;
else   dUy8Uer ;

}
